--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-asgiref==3.5.0
 Django==4.0.2
 djangorestframework==3.13.1
-pytz==2021.3
-sqlparse==0.4.2
-tzdata==2021.5
+djangorestframework-simplejwt==5.0.0
+django-cors-headers==3.11.0
+django-linear-migrations==2.3.0
