--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-Django==4.0.2
+asgiref==3.5.0
+Django==3.2.12
+pytz==2021.3
+sqlparse==0.4.2
+typing_extensions==4.0.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 django-cors-headers==3.11.0
